--- a/ch14/Cargo.toml
+++ b/ch14/Cargo.toml
@@ -42,3 +42,7 @@ path = "newtype.rs"
 [[bin]]
 name = "associated_type"
 path = "associated_type.rs"
+
+[[bin]]
+name = "phantom_type"
+path = "phantom_type.rs"
