--- a/ch16/Cargo.toml
+++ b/ch16/Cargo.toml
@@ -6,3 +6,11 @@ edition = "2021"
 [[bin]]
 name = "traits"
 path = "traits.rs"
+
+[[bin]]
+name = "derive"
+path = "derive.rs"
+
+[[bin]]
+name = "dyn"
+path = "dyn.rs"
